# IoT_Sleep_Assistant

SleepMain/: SleepMain.ino  data.h  driver.ino
SleepSensor/: CMakeLists.txt  sdkconfig  sdkconfig.old
SleepSensor/components/: CMakeLists.txt  component.mk
SleepSensor/components/ADXL345/: ADXL345.h  ADXl345.c  SimpleKalmanFilter.c  SimpleKalmanFilter.h
SleepSensor/components/MAX30100/: MAX30100.c  MAX30100.h  MAX30100_filter.c  MAX30100_filter.h  MAX30100_main.c  MAX30100_main.h
SleepSensor/components/User_HTTP/: HTTP_main.c  HTTP_main.h  READme.txt
SleepSensor/components/User_I2C/: i2cmain.c  i2cmain.h
SleepSensor/main/: main.c
SleepWebapp/: 26_Jul_2022.csv  alarm.html  fancontrol.html  health.txt  history.csv  index.html  sleepcheck.html  update.php
